k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-account
  labels:
    name: bank-account
